--- a/config/config.example.json
+++ b/config/config.example.json
@@ -5,5 +5,6 @@
     "retry_delay": 1,
     "max_retries": 5,
     "sem_limit": 2,
-    "ignore_skiplist": false
+    "ignore_skiplist": false,
+    "ignore_check_interval": false
 }
